2004-01-22  Geert Stappers <stappers@stappers.nl>

	* plugin-random.c

	Fixed C99ism build problem on gcc-2.95.4

2004-01-20  Dave Malcolm  <david@davemalcolm.demon.co.uk>

	* cong-dispspec.c, cong-dispspec.h, plugin-random.c

	Added slow access but convenient access method to elements of a CongDispspec; Improvements to random doc generation in absence of a DTD

	* plugin-dtd.c, plugin-tests.c

	Fixed typo; disabled broken plugin

	* cong-file-new.c, cong-service-document-factory.h, plugin-random.c

	File->New Assistant can now store per-assistant/per-factory data; use this to wire up the GUI for the random doc plugin to the creation algorithm

	* cong-primary-window.c

	Added a way to disable creation of a main editing widget to make it easier to test random document creation (set #define ENABLE_MAIN_WIDGET to 0)
	
	* cong-node-properties-dialog.c

	Added a tree-based content model view to the DTD tab

2004-01-19  Dave Malcolm  <david@davemalcolm.demon.co.uk>

	* plugin-random.c

	Fixed a bug in traversing the content model of an element in the DTD

	* cong-dtd.c, cong-dtd.h, plugin-random.c

	Random document plugin now makes use of DTD if available to try to generate valid random documents
	
	* plugin-random.c, Makefile.am, cong-app.c, cong-fake-plugin-hooks.h

	New plugin for generating random documents

2004-01-16  Daniel van Eeden  <daniel_e@dds.nl>

	* cong-file-new.c, cong-primary-window.c & global.h

	There should be a "new document" button if no document is loaded.

2004-01-16  Dave Malcolm  <david@davemalcolm.demon.co.uk>

	* cong-editor-widget3.c, cong-node.c:

	Bulletproofing for the Cleanup XML Source tool

	* cong-editor-widget3.c

	Removed dead code

2004-01-15  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-app.c

	Suppress some debug logging

2004-01-15  Geert Stappers <stappers@stappers.nl>

	* plugin-templates.c

	Fixed C99ism build problem on gcc-2.95.4

2004-01-15  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-app.c
